add UTXO splitter tool

--- a/src/qt/res/css/style.css
+++ b/src/qt/res/css/style.css
@@ -435,6 +435,14 @@ QScrollBar:right-arrow {
     height: 10px;
 }
 
+/*******************************/
+/* SPLIT BLOCK CHECK BOX       */
+/*******************************/
+
+QDialog#SendCoinsDialog .QFrame#frameCoinControl .QCheckBox#splitBlockCheckBox {
+    color:#ffffff;
+}
+
 
 /*******************************************************/
 
